Installed initial app packages, reviewed boilerplate

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">Test</main>
   </body>
 </html>
