--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
+    <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
   </head>
 
   <body>
