--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
     <!-- External Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="./styles/header.css" type="text/css" />
     <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -51,6 +52,26 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section>
+        <article class="tweet">
+          <header>
+            <div>
+            <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+            <h3 class="userName">John Smith</h3>
+            </div>
+            <span class="userId">@JSmith</span>
+          </header>
+          <p>140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet! character.</p>
+          <footer>
+            <p>10 days ago</p>
+            <div class="tweet-buttons">
+              <ion-icon name="flag">fl</ion-icon>
+              <ion-icon name="repeat">rt</ion-icon>
+              <ion-icon name="heart">lv</ion-icon>
+            </div>
+          </footer>
+        </article>
       </section>
     </main>
   </body>
