Added hovering effect using jQuery

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,6 @@
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <!-- App JS -->
-    <script type="text/javascript" src="./scripts/client.js"></script>
-    <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
   </head>
 
   <body>
@@ -66,13 +63,17 @@
           <footer>
             <p>10 days ago</p>
             <div class="tweet-buttons">
-              <ion-icon name="flag">fl</ion-icon>
-              <ion-icon name="repeat">rt</ion-icon>
-              <ion-icon name="heart">lv</ion-icon>
+              <fav-icon name="flag">fl</ion-icon>
+              <fav-icon name="repeat">rt</ion-icon>
+              <fav-icon name="heart">lv</ion-icon>
             </div>
           </footer>
         </article>
       </section>
     </main>
   </body>
+  <!-- App JS -->
+  <script type="text/javascript" src="./scripts/client.js"></script>
+  <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
+  <script type="text/javascript" src="./scripts/tweetHover.js" ></script>
 </html>
