Included compose button to navbar

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <!-- Top nav bar (fixed) -->
       <nav>
         <span>tweeter</span>
+        <button type="button" class="compose-tweet">Write a new tweet</button>
       </nav>
       <header>
         <div>
@@ -40,7 +41,6 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
