Implemented dynamic tweet load, save and validation using AJAX

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,13 @@
     <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="./styles/tweet.css" type="text/css" />
 
-    <!-- External JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
       <nav>
         <span>tweeter</span>
-        <button type="button" class="compose-tweet">Write a new tweet</button>
+        <p><strong>Write </strong> a new tweet</p>
       </nav>
       <header>
         <div>
@@ -34,44 +31,33 @@
         </div>
         <br>
         <div>
-            <h2><span class="first-name">Joao</span> Junior</h2>
+            <h2><strong>Joao</strong> Junior</h2>
         </div>
       </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <form method="POST" action="/tweets">
+        <div class="error-message"></div>
+        <form id="tweet-form" method="POST" action="/tweets/" enctype="application/x-www-form-urlencoded"
+        accept-charset="UTF-8">
+          <h5 id="ValidateError"></h5>
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div>
-            <button type="submit">Tweet</button>
+          <textarea name="text"></textarea>
+          <div id="form-btm">
+            <button type="submit" class="tweet-submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
       </section>
-      <section>
-        <article class="tweet">
-          <header>
-            <div>
-            <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
-            <h3 class="userName">John Smith</h3>
-            </div>
-            <span class="userId">@JSmith</span>
-          </header>
-          <p>140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet!! 140 character tweet! character.</p>
-          <footer>
-            <p>10 days ago</p>
-            <div class="tweet-buttons">
-              <fav-icon name="flag">fl</ion-icon>
-              <fav-icon name="repeat">rt</ion-icon>
-              <fav-icon name="heart">lv</ion-icon>
-            </div>
-          </footer>
-        </article>
-      </section>
+
+      <article id="tweets-container">
+      </article>
+
     </main>
   </body>
+  <!-- External JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- App JS -->
   <script type="text/javascript" src="./scripts/client.js"></script>
   <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
