Fixed tweet hover effect

--- a/public/index.html
+++ b/public/index.html
@@ -51,15 +51,16 @@
         </form>
       </section>
 
-      <article id="tweets-container">
-      </article>
+      <section id="tweets-container">
+      </section>
 
     </main>
   </body>
+
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
   <!-- App JS -->
   <script type="text/javascript" src="./scripts/client.js"></script>
   <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
-  <script type="text/javascript" src="./scripts/tweetHover.js" ></script>
 </html>
