Added moment.js to count time from tweets, tweaked client logic

--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,14 @@
     </main>
   </body>
 
-  <!-- External JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- External JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <!-- App JS -->
-  <script type="text/javascript" src="./scripts/client.js"></script>
-  <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
+    <!-- Moment JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+
+    <!-- App JS -->
+    <script type="text/javascript" src="./scripts/client.js"></script>
+    <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
+    
 </html>
