--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- External Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
+    <!-- External icons -->
+    <script src="https://kit.fontawesome.com/5075b93769.js" crossorigin="anonymous"></script>
+
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
@@ -65,5 +68,5 @@
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
     <script type="text/javascript" src="./scripts/compose-char-counter.js" ></script>
-    
+
 </html>
